tests/backend/checkmach/fail18.output
File "fail18.ml", line 1, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail18.f (camlFail18.f_HIDE_STAMP)
