tests/backend/checkmach/fail18.ml
let[@zero_alloc] f x ?(y = (x, x)) () = fst y + snd y
